Use the native byte order when converting from utf8 to utf16

Bug: https://bugs.webkit.org/show_bug.cgi?id=312973
Bug-Debian: https://bugs.debian.org/cgi-bin/bugreport.cgi?bug=1132818
Origin: https://github.com/WebKit/WebKit/pull/63416

===================================================================

Gbp-Pq: Name fix-big-endian-string.patch